--- a/docs/model.tex
+++ b/docs/model.tex
@@ -264,7 +264,7 @@ Ze względu na wiele ustawień elementów bazy, należy stworzyć bogaty interfe
 \section{Porównanie modeli}
 Posiadając model kinematyczny, którego ruch jest sterowany wzorami możemy porównać jego pozycję i rotację z modelem dynamicznym.
 Należy w tym samym momencie nadać bazom identyczne prędkości kół i zbierać dane dotyczące wzajemnej pozycji.
-Nadano kołom kolejne prędkości zgodnie z numeracją w rysunku \ref{graphics:base_dims}, $(-2 , 1 , 0 , -3)$.
+Nadano kołom kolejne prędkości zgodnie z numeracją w rysunku \ref{fig:base_dims}, $(-2 , 1 , 0 , -3)$.
 
 \begin{figure}[H]
 \centering
