--- a/docs/readme
+++ b/docs/readme
@@ -1,5 +1,4 @@
 Do poruszenia:
-Opis platformy (wymiary itp)
 Info, że przesunięcie środka ciężkości nie zmieniło eksperymantów.
 Naprawić model widoku z góry (wyrenderować na nowo)
 
@@ -10,3 +9,5 @@ Masa kół.
 Moment obrotowy (tensor) omnivelmy i kół.
 Masa transportowana i intefejs jej zmiany
 Ustawienie domyślnych momentów obrotowych obliczonych z zewnątrz.
+Interfejs GUI.
+Powtórka w V-REPie.
