--- a/ros/src/omnivelma/readme
+++ b/ros/src/omnivelma/readme
@@ -13,6 +13,10 @@ przednie lewe
 tylne lewe
 tylne prawe
 
+/omnivelma/encoders
+omnivelma/Encoders
+Kąt i prędkość dla każdego koła.
+
 /omnivelma/pose
 geometry_msgs/Pose
 Zwraca aktualną pozycję
@@ -23,3 +27,11 @@ omnivelma/SetFriction
 Ustawia wektory tarć.
 mu1 to wektor równoległy do osi rolki, domyślnie 1, rolka nie może się obracać na tej osi.
 mu2 to wektor prostopadły do osi rolki, domyślnie 0, rolka obraca się na tej osi.
+
+/omnivelma/set_inertia
+omnivelma/SetInertia
+Ustawia masę, środek ciężkości i moment bezwładności dla części składowych modelu.
+Każda składowa ma lokalny środek ciężkości w przybliżonym punkcie ciężkości.
+
+
+
