--- a/dp/main.tex
+++ b/dp/main.tex
@@ -7,6 +7,7 @@
 \usepackage[polish]{babel}
 \usepackage{hyperref}
 \usepackage{float}
+\usepackage{textcomp}
 \usetheme{Darmstadt}
 \usecolortheme{rose}
 \input{macros.tex}
@@ -35,7 +36,7 @@
 	
 	\section{Cel}
 	\begin{frame}
-		\frametitle{Platforma dookólna}
+		\frametitle{Co kryje się w P109}
 		\begin{columns}[c]
 			\column{0.5\textwidth}
 			\includegraphics[width=0.8\textwidth]{graphics/velma.png} \\
@@ -71,9 +72,147 @@
 		\frametitle{Kierunki ruchu}
 		\includegraphics[width=\textwidth]{graphics/dirs.pdf}
 	\end{frame}
-
-
+	\begin{frame}
+		\frametitle{Kinematyka}
+		\[
+		\begin{bmatrix}
+		v_x \\
+		v_y \\
+		\omega_z \\
+		\end{bmatrix}
+		=
+		\frac{r}{4}
+		\begin{bmatrix}
+		-1 & 1 & -1 & 1 \\
+		1 & 1 & 1 & 1 \\
+		\frac{2}{a+b} & \frac{-2}{a+b} & \frac{-2}{a+b} & \frac{2}{a+b} \\
+		\end{bmatrix}
+		\begin{bmatrix}
+		\omega_1 \\
+		\omega_2 \\
+		\omega_3 \\
+		\omega_4 \\
+		\end{bmatrix}
+		\]
+		\begin{table}
+		\centering
+		\begin{tabular}{c l}
+		Oznaczenie & Opis \\
+		\hline
+		$r$ &  Promień koła w najszerszym miejscu. \\
+		$a$ &  Szerokość platformy. \\
+		$b$ &  Długość platformy. \\
+		$\omega_i$ &  Prędkość kątowa kół. \\
+		$v_x$ &  Prędkość transwersalna w osi X. \\
+		$v_y$ &  Prędkość transwersalna w osi Y. \\
+		$\omega_z$ &  Prędkość kątowa w osi Z (w górę). \\
+		\end{tabular}
+		\end{table}
+	\end{frame}
 	
+	\section{ROS}
+	\begin{frame}
+		\frametitle{Robot Operating System}
+		\begin{columns}[c]
+			\column{0.3\textwidth}
+			\includegraphics[width=\textwidth]{graphics/ros_logo.png} \\
+			Logo ROS\footnotemark
+			\column{0.7\textwidth}
+			\begin{itemize}
+				\item Wbrew nazwie wcale nie jest systemem operacyjnym, a frameworkiem.
+				\item Umożliwia zarządzanie i uruchamianie osobnych modułów i dba o komunikację między nimi.
+				\item Dostarcza szereg gotowych algorytmów i komunikatów.
+				\item Moduł może być biblioteką, danymi, definicjami, programem wykonywalnym, skryptem. Niekoniecznie na tej samej maszynie.
+				\item Komunikacja poprzez kolejki wiadomości i asynchroniczne wywołania, łatwe do przesyłania przez sieć.
+			\end{itemize}
+		\end{columns}
+		\footnotetext{http://www.ros.org/}
+	\end{frame}
+	\begin{frame}
+		\frametitle{Gazebo}
+		\begin{columns}[c]
+			\column{0.3\textwidth}
+			\includegraphics[width=\textwidth]{graphics/gazebo_logo.png} \\
+			Logo Gazebo\footnotemark
+			\column{0.7\textwidth}
+			\begin{itemize}
+				\item Symulator obiektów w przestrzeni wirtualnej.
+				\item Używa silnika fizycznego do symulacji różnych części robota.
+				\item Wtyczki są bibliotekami w C++ ładowanymi w trakcie wykonania.
+				\item Obiekty symulacyjne zapisywane w XML-owym formacie SDF.
+			\end{itemize}
+		\end{columns}
+		\footnotetext{http://gazebosim.org/}
+	\end{frame}
+	\begin{frame}
+		\frametitle{Jak to działa}
+		\begin{enumerate}
+			\item Tworzymy odpowiednie moduły w ROS-ie:
+			\begin{itemize}
+			 \item Model platformy i skrypty sterujące, oraz definicje komunikatów.
+			 \item Plik definiujący przestrzeń symulacji.
+			 \item Programy pomocnicze.
+			\end{itemize}
+			\item Uruchamiamy symulację i komunikujemy z programem sterującym.
+			\item Zbieramy dane, badamy dokładność programu i modelu, wprowadzamy poprawki.
+			\item Podłączamy program sterujący do rzeczywistego robota.
+		\end{enumerate}
+	\end{frame}
 	
+	\section{Implementacja}
+	\begin{frame}
+		\frametitle{Stworzenie modelu}
+		\begin{columns}[c]
+			\column{0.4\textwidth}
+			\includegraphics[width=\textwidth]{graphics/model.png} \\
+			Dynamiczny model platformy.
+			\column{0.6\textwidth}
+			\begin{enumerate}
+			\item Korzystając z modelu CAD wygenerować siatki o odpowiednich wymiarach.
+			\item W pliku SDF zdefiniować składowe modelu, wygląd i przeguby.
+			\item Zapisać wtyczkę sterującą ruchem kół.
+			\item Umieścić wszystko w symulatorze i uruchomić.
+		\end{enumerate}
+		\end{columns}
+	\end{frame}
+	\begin{frame}
+		\frametitle{Próba odwzorowania}
+		\begin{itemize}
+		\item Każde koło ma 12 rolek.
+		\item Każda rolka ma przegub łączący ją z kołem.
+		\item Każda rolka zawiera się w paraboloidzie, więc nie może być przybliżona wbudowanym kształtem.
+		\item Każda siatka jest kanciasta i powoduje niejednostajne tarcie.
+		\item Każda ściana generuje bardzo dużą ilość obliczeń silnika fizycznego.
+		\end{itemize}
+		Skomplikowanie modelu nie nadaje się do symulacji w czasie rzeczywistym, a także generuje duże błędy.
+	\end{frame}
+	\begin{frame}
+		\frametitle{Próba resetowania pozycji rolek}
+		\begin{itemize}
+		\item Do korpusu podłączone jest wirtualne koło, do tego koła podłączamy jedną obróconą o 45\textdegree rolkę, do której dodajemy kolizję z podłożem.
+		\item W każdej klatce symulacji resetujemy pozycję rolki, aby nie obróciła się razem z kołem wirtualnym.
+		Działa to tak, jakby koło zawsze dotykało podłoża jedną rolką.
+		\item Gazebo nie ma zaimplementowanego drzewa pozycji obiektów względem siebie. 
+		Informacja o tym nie znajduje się w dokumentacji, tylko w notatkach o błędach, w kontroli wersji.
+		\item Podobne rozwiązanie to resetowanie osi rolki w każdej klatce. Powoduje niekontrolowane zachowanie i skoki.
+		\end{itemize}
+	\end{frame}
+	\begin{frame}
+		\frametitle{Modyfikacja wektorów tarcia}
+		\begin{columns}[c]
+			\column{0.5\textwidth}
+			\includegraphics[width=0.8\textwidth]{graphics/friction.pdf} \\
+			Wektory tarcia w symulatorach fizyki.\footnotemark
+			\column{0.5\textwidth}
+			\includegraphics[width=0.8\textwidth]{graphics/base_vects.pdf} \\
+			Ustawienie wektorów tarcia w modelu. Ruch w kierunku F1 jest ograniczony, w F2 nieograniczony.
+		\end{columns}
+		\footnotetext{Na podstawie obrazka z dokumentacji ODE: http://www.ode-wiki.org/wiki/index.php?title=Manual:\_Joint\_Types\_and\_Functions}
+	\end{frame}
 	
+	\section{Komunikacja}
+	% Wykres komunikacji
+	
+	\section{Przyszłość}
+	% Co jesszcze do zrobienia (testowanie na robocie, powtórka w V-Repie)
 \end{document}
