Dodaj jeszcze kilka slajdów.
To już będzie na pewno koniec.

--- a/dp/main.tex
+++ b/dp/main.tex
@@ -202,6 +202,11 @@
 		\footnotetext{http://gazebosim.org/}
 	\end{frame}
 	\begin{frame}
+		\frametitle{Edytor Gazebo}
+		\includegraphics[width=\textwidth]{graphics/editor.png}
+	\end{frame}
+
+	\begin{frame}
 		\frametitle{Jak to działa}
 		\begin{enumerate}
 			\item Tworzymy odpowiednie moduły w ROS-ie:
@@ -286,6 +291,20 @@
 		\frametitle{Komunikacja wewnętrzna i zewnętrzna}
 		\centering
 		\includegraphics[width=\textwidth]{graphics/comm.pdf}
+	\end{frame}
+	
+	\section{Problemy}
+	\begin{frame}
+		\frametitle{Największe przeszkody w trakcie tworzenia}
+		\begin{enumerate}
+			\item Nieodpowiednie ustawienie zależności w \texttt{CMakeLists.txt}.
+			\item Niezaimplementowane, a udokumentowane funkcjonalności.
+			\item Niewystarczająco dokładnie opisane API.
+			\item Niewielkie zainteresowanie tematem na forach i martwe linki.
+			\item Nieprzewidywalne zachowanie maszyny symulacyjnej.
+			\item Brak wsparcia twórców podobnych modeli.
+			\item Zależności od dokładnych wersji bibliotek i niemożność uruchomienia na nie-Ubuntu.
+		\end{enumerate}
 	\end{frame}
  
 	\section{Przyszłość}
