Dodaj interpretację NaN
NaN będzie interpretowany jako zachowanie poprzedniej wartości prędkości koła.

--- a/dp/main.tex
+++ b/dp/main.tex
@@ -71,19 +71,12 @@
 		\frametitle{Koła Szwedzkie (Mecanum)}
 		\centering
 		\includegraphics[width=\textwidth]{graphics/wheel.pdf}
-	\end{frame}
-	\begin{frame}
-		\frametitle{Na co pozwalają}
-		\begin{block}{Wynalezione w 1973}
-			Przez szwedzkiego inżyniera Beng Ilona zatrudnionego w firmie Mecanum.\footnotemark
-		\end{block}
 		\begin{itemize}
+			\item Pozwalają na dowolny obrót i ruch pojazdu w każdą stronę.
 			\item Rolka obrócona względem osi o 45\textdegree.
 			\item Każde koło ma 12 pasywnych rolek.
-			\item Koła posiadają po 3 stopnie swobody.
 			\item Punkt kontaktu powinien płynnie przechodzić z rolki na rolkę.
 		\end{itemize}
-	\footnotetext{Wikipedia}
 	\end{frame}
 	\begin{frame}
 		\frametitle{Podobne koła}
