--- a/ros/src/omnivelma/readme
+++ b/ros/src/omnivelma/readme
@@ -6,7 +6,7 @@ typ
 opis
 
 /omnivelma/vels
-omnivelma/Vels
+omnivelma_msgs/Vels
 Przyjmuje prędkości kół w kolejności:
 przednie prawe
 przednie lewe
@@ -15,7 +15,7 @@ tylne prawe
 Wysłanie NaN nie modyfikuje poprzedniej prędkości.
 
 /omnivelma/encoders
-omnivelma/Encoders
+omnivelma_msgs/Encoders
 Kąt i prędkość dla każdego koła.
 
 /omnivelma/pose
@@ -24,13 +24,13 @@ Zwraca aktualną pozycję
 http://docs.ros.org/api/geometry_msgs/html/msg/Pose.html
 
 /omnivelma/set_friction
-omnivelma/SetFriction
+omnivelma_msgs/SetFriction
 Ustawia wektory tarć.
 mu1 to wektor równoległy do osi rolki, domyślnie 1, rolka nie może się obracać na tej osi.
 mu2 to wektor prostopadły do osi rolki, domyślnie 0, rolka obraca się na tej osi.
 
 /omnivelma/set_inertia
-omnivelma/SetInertia
+omnivelma_msgs/SetInertia
 Ustawia masę, środek ciężkości i moment bezwładności dla części składowych modelu.
 Każda składowa ma lokalny środek ciężkości w przybliżonym punkcie ciężkości.
 
