--- a/ros/src/transmutator/readme
+++ b/ros/src/transmutator/readme
@@ -1,19 +1,20 @@
-Transmutator - transmutacja (z obrotem) geometry_msgs/Twist na omnivelma/Vels
+Transmutator - Zamiana kierunku na prędkości kół.
+Użycie: transmutator [-r OBRÓT] TOPIC
+Transmutacja (z obrotem) geometry_msgs/Twist na omnivelma/Vels i wysłanie do TOPIC.
 geometry_msgs/Twist jest generowane przez moduł RQT, oraz pr2_teleop, można używać różnorodnych urządzeń sterujących.
 
-Przyjmuje opcjonalnie jeden z argumentów:
--90 -180 -270
-To oznacza, ile stopni w lewo obrócić wejście typu geometry_msgs/Twist (minus nie jest minusem, tylko rozpoczęciem argumentu).
+Przyjmuje opcjonalnie argument -r z wartością: 0, 90, 180, 270.
+To oznacza, ile stopni w lewo obrócić wejście typu geometry_msgs/Twist.
 Przydatne, jeśli program do sterowania robota ma inaczej zdefiniowany przód, niż Omnivelma.
 Na przykład sterowanie RobotSteering z RQT, albo rp2_teleop zakłada, że przód jest w kierunku X+, a Omnivelma ma przód w kierunku Y+.
-Należy uruchomić więc Transmutator z argumentem -90, żeby łatwo z nich sterować Omnivelmą.
+Należy uruchomić więc Transmutator z argumentami '-r 90', żeby łatwo z nich sterować Omnivelmą.
 
 Komunikacja programu w formie:
 nazwa
 typ
 opis
 
-omnivelma/vels i pseudovelma/vels
+TOPIC
 omnivelma_msgs/Vels
 Zwraca prędkości kół do powyższych rostopic.
 
