--- a/ros/src/widelnica/readme
+++ b/ros/src/widelnica/readme
@@ -1,4 +1,5 @@
 Widelnica - rozszczepienie omivelma_msgs/Vels na wiele wyjść
+Użycie: widelnica TOPIC TOPIC TOPIC...
 
 Przyjmuje za argumenty listę topiców do nadawania.
 Wystawia odbiór typu omnivelma_msgs/Vels o nazwie /widelnica/vels
