--- a/readme
+++ b/readme
@@ -28,7 +28,7 @@ Przenieś tam zawartość katalogu ros/.
 $ ./init
 To zainicjuje katalog roboczy i skompiluje projekt.
 $ ./launch <obrót>
-Uruchomi Gazebo z platformami, oraz Transmutator. Opcjonalny argument -90, -180, -270 mówi o ile stopni obrócić wejście Twist w lewo.
+Uruchomi Gazebo z platformami, oraz Transmutator. Argument 90, 180, 270 mówi o ile stopni obrócić wejście Twist w lewo.
 Przydatne, jeśli przód programu sterującego nie jest w kierunku Y+, jak w Omnivelmie.
 
 Potem dla wywoływania akcji jak nadawanie do topicu, wykrywanie działających programów itp. w każdym nowym terminalu wywołaj lokalnie setup:
@@ -71,8 +71,10 @@ Ocznica:
 Flooria:
 	/flooria/set_friction		ustaw współczynniki tarcia podłoża
 Transmutator:
-	/transmutator/twist			wejście do łatwego sterowania
-	/omnivelma/vels				prędkości kół wysyłane do Omnivelmy
-	/pseudovelma/vels			prędkości kół wysyłane do Pseudovelmy
+	/transmutator/twist			wejście do sterowania kierunkiem
+	TOPIC						wyjście prędkości kół do sprecyzowane w argumencie
+Widelnica:
+	/widelnica/vels				wejście do rozmnożenia
+	TOPIC...					wyjścia podane w argumentach
 
 	
