--- a/docs/readme
+++ b/docs/readme
@@ -1,11 +1,12 @@
 Do poruszenia:
 Info, że przesunięcie środka ciężkości nie zmieniło eksperymantów.
 Naprawić model widoku z góry (wyrenderować na nowo)
-Napisać o tum, że zakładamy bezoporowy obrót kół, a przy wymuszonym są niespodziewane błędy, jak w rzeczywistości.
+Napisać o tym, że zakładamy bezoporowy obrót kół, a przy wymuszonym są niespodziewane błędy, jak w rzeczywistości.
 Napisać, że przód jest nieokreślony, dlatego został zbudowany translator
+Użyć słowa primytywy w opisie fizyki modelu
+
 
 Do zrobienia:
 Masa transportowana i intefejs jej zmiany. (może być i tak za mało dokładne, żeby był sens)
-Przerobić komendy transfomorphera na -r 90 zamiast -90
 Interfejs GUI.
 Powtórka w V-REPie.
