--- a/vrep/readme
+++ b/vrep/readme
@@ -7,9 +7,10 @@ Możesz go umieścić w dowolnym miejscu na komputerze.
 
 Otwórz w nim tę scenę omnivelma.ttt.
 
-W katalogu ROSa jest pakiet vreporter do komunikacji z V-Repem.
+W katalogu ROSa jest pakiet Vreporter do komunikacji z V-Repem.
 Ustaw zmienną systemową VREP_ROOT na katalog symulatora, aby włączyć generowanie tego pakietu w skrypcie init.
 Jeśli ściągniesz V-Repa i ustawisz zmienną, pamiętaj o usunięciu build/ i devel/, aby włączyć generowanie pakietu na nowo.
 
+Pamiętaj, żeby włączyć symulację przez włączeniem Vreportera, bo pakiety nie będą dochodzić.
 
 
