--- a/vrep/readme
+++ b/vrep/readme
@@ -5,12 +5,33 @@ http://www.coppeliarobotics.com/downloads.html
 Uruchamia się go za pomocą skryptu vrep.sh, nie trzeba instalować.
 Możesz go umieścić w dowolnym miejscu na komputerze.
 
-Otwórz w nim tę scenę omnivelma.ttt.
+Otwórz w nim dołączoną scenę omnivelma.ttt.
+Są dwa sposoby na komunikację z V-Repem.
 
-W katalogu ROSa jest pakiet Vreporter do komunikacji z V-Repem.
-Ustaw zmienną systemową VREP_ROOT na katalog symulatora, aby włączyć generowanie tego pakietu w skrypcie init.
+SPOSÓB 1:
+Przenieś Vreporter do katalogu budowania ROSa.
+Służy on do komunikacji z V-Repem za pomocą RemoteAPI (wolniejsze, bardziej ograniczone, ale łatwiejsze w obsłudze)
+Ustaw zmienną systemową VREP_ROOT na katalog symulatora.
 Jeśli ściągniesz V-Repa i ustawisz zmienną, pamiętaj o usunięciu build/ i devel/, aby włączyć generowanie pakietu na nowo.
 
-Pamiętaj, żeby włączyć symulację przez włączeniem Vreportera, bo pakiety nie będą dochodzić.
+SPOSÓB 2:
+Tutaj jest biblioteka libv_repExtRosInterface.so, przenieś ją do $VREP_ROOT, uruchom roscore, a potem V-Repa.
+Powinien wczytać "RosInterface", sprawdź log uruchomienia.
+Uruchom symulację i sprawdź, czy rozumie wiadomości użyte w skrypcie.
+Uruchom odpowiednie pakiety ROSa do komunikacji z systemem na następujące topic:
 
+Wejście:
+/vrepovelma/vels			wejście prędkości kół
 
+Jeśli libv_repExtRosInterface.so nie jest wczytywany, może być potrzebna jego ponowna kompilacja.
+Wykonaj instrukcje w $VREP_ROOT/programming/ros_packages/ros_vrep_rosinterface_install_guide.txt
+Nie muszą być przestrzegane bardzo dokładnie, ale ważne jest zainstalowanie wymaganych programów do kompilacji.
+W ściągniętym z GitHuba pakiecie vrep_ros_interface należy wykonać instrukcje w pliku README.txt
+Jak tam napisano, należy dodać definicję "omnivelma_msgs/Vels" do pliku "meta/messages.txt", aby skrypt w Lua rozumiał wiadomość.
+To nie wystarczy do sukcesywnej kompilacji, gdyż ważna jest kolejność generowania pakietów. Należy jeszcze:
+- dodać "omnivelma_msgs" do sekcji "find_package" w pliku CMakeLists.txt
+- dodać "omnivelma_msgs" do sekcji "catkin_package" w pliku CMakeLists.txt
+- dodać "<build_depend>omnivelma_msgs</build_depend>" do "package.xml"
+- dodać "<run_depend>omnivelma_msgs</run_depend>" do "package.xml"
+Skompilować trzeba za pomocą "catkin build", a nie "catkin_make", ten drugi nie zadziała.
+Skopiować skompilowaną bibliotekę do $VREP_ROOT za pomocą dołączonego skryptu: "rosrun vrep_ros_interface install.sh"
