--- a/docs/readme
+++ b/docs/readme
@@ -10,3 +10,4 @@ Narysować graf połączeń elementów.
 
 Do zrobienia:
 Masa transportowana i intefejs jej zmiany. (może być i tak za mało dokładne, żeby był sens)
+Wyjście typu Twist, do prędkości
